--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -10,4 +12,5 @@ body {
   align-items: center;
   justify-content: center;
   text-align: center;
+  font-family: Montserrat;
 }
