--- a/src/components/templates/Landing.module.css
+++ b/src/components/templates/Landing.module.css
@@ -8,6 +8,7 @@
   align-items: center;
   gap: 10px;
   flex-direction: column;
+  user-select: none;
 }
 .words div {
   display: flex;
@@ -23,4 +24,15 @@
   height: 30px;
   text-transform: uppercase;
   flex-direction: column;
+}
+
+.holder {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 10px;
+}
+.holder button,
+.holder input {
+  padding: 5px 10px;
 }
