--- a/src/style.css
+++ b/src/style.css
@@ -7,10 +7,11 @@
 }
 
 body {
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
   font-family: Montserrat;
+  margin-top: 10px;
 }
